# Replicate-Blair_Weintraub_23

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
data/raw/: admin_data_after.csv  admin_data_during.csv  admin_data_prior.csv  conversion_metadata.txt  manzanas_restricted.csv  patrols_block_data.csv  patrols_data.csv  survey_monitoring.csv
docs/: robust_weights.md  simulation_report.md  weighting_design.md
output/figures/full_pipeline/: annotation.txt  full_pipeline_annotation.md
output/tables/: robustness_weights_results.csv  table1_complete_RI.tex
output/tables/full_pipeline/: table1_complete.tex
src/: 00_pipeline_full.py  01_housekeeping.py  02_run_randomization_inference.py  02b_precompute_ri_coefficients.py  03_tables.py  04_figures.py  analyze_iweight_patterns.py  reproduce_weights.py  robustness_balance_test.py  validate_weighting_schemes.py
src/utils/: __init__.py  convert_data.py  data_validation.py  latex_generator.py  table_comparison.py  validate_simulation_data.py
tests/: table1_comparison_detailed.json  test_02b_matrix_optimization.py  test_coefficient_validation.py  test_data_conversion.py  test_data_encoding_analysis.py  test_full_ri_validation.py  test_performance_bottlenecks.py  test_regression_comparison.py  test_simple_bottlenecks.py  test_table1_numerical_comparison.py
