[project]
name = "replication-brodeaux"
version = "0.1.0"
description = "Python replication of Blair & Weintraub (2023) Military Policing study"
authors = [
    {name = "Dan Tran"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pyreadstat>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numba>=0.58.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "patsy>=0.5.0",
    "xlsxwriter>=3.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
performance = [
    "cython>=3.0.0",
    "dask>=2023.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
